--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -120,12 +120,8 @@
         - name: Implementeren - REST API
           displayName: 'deployment,rollback on error,redeploy'
           href: resource-group-template-deploy-rest.md
-        - name: Sjablonen beveiligen met een SAS-token
-          items:
-            - name: Azure CLI gebruiken
-              href: resource-manager-cli-sas-token.md
-            - name: Azure PowerShell gebruiken
-              href: resource-manager-powershell-sas-token.md
+        - name: Sjabloon beveiligen met een SAS-token
+          href: secure-template-with-sas-token.md
         - name: Implementeren naar meerdere resourcegroepen of abonnementen
           href: resource-manager-cross-resource-group-deployment.md
     - name: CI/CD
