--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -44,6 +44,8 @@
           href: ingest-data-event-hub.md
         - name: Event Grid
           href: ingest-data-event-grid.md
+        - name: Opname met één klik
+          href: ingest-data-one-click.md
         - name: Kafka
           href: ingest-data-kafka.md
         - name: Python
