--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -439,20 +439,38 @@
           href: ./partner-center-portal/account-migration-from-cpp-to-pc.md
     - name: Een nieuwe aanbieding maken
       items:
-        - name: Controlelijst voor aanbieding maken
-          href: ./partner-center-portal/offer-creation-checklist.md
-        - name: Een SaaS-aanbieding maken
-          href: ./partner-center-portal/create-new-saas-offer.md
-        - name: SaaS-facturering naar gebruik
-          href: ./partner-center-portal/saas-metered-billing.md
+        - name: Dynamics 365-aanbiedingen
           items:
-            - name: Service-API's voor Marketplace-meting - Veelgestelde vragen
-              href: ./partner-center-portal/marketplace-metering-service-apis-faq.md
-            - name: Service-API's voor Marketplace-meting
-              href: ./partner-center-portal/marketplace-metering-service-apis.md
-        - name: SaaS-uitvoerings-API's
-          href: ./partner-center-portal/pc-saas-fulfillment-apis.md
+            - name: Een Dynamics 365 for Customer Engagement- en PowerApps-aanbieding maken
+              href: ./partner-center-portal/create-new-customer-engagement-offer.md
+            - name: Een Dynamics 365 for Operations-aanbieding maken
+              href: ./partner-center-portal/create-new-operations-offer.md
+            - name: Een Dynamics 365 Business Central-aanbieding maken
+              href: ./partner-center-portal/create-new-business-central-offer.md
+        - name: SaaS-aanbiedingen
           items:
+            - name: Controlelijst voor SaaS-aanbieding maken
+              href: ./partner-center-portal/offer-creation-checklist.md
+            - name: Een SaaS-aanbieding maken
+              href: ./partner-center-portal/create-new-saas-offer.md
+            - name: SaaS-facturering naar gebruik
+              href: ./partner-center-portal/saas-metered-billing.md
+              items:
+                - name: Service-API's voor Marketplace-meting - Veelgestelde vragen
+                  href: ./partner-center-portal/marketplace-metering-service-apis-faq.md
+                - name: Service-API's voor Marketplace-meting
+                  href: ./partner-center-portal/marketplace-metering-service-apis.md
+            - name: SaaS-uitvoerings-API's
+              href: ./partner-center-portal/pc-saas-fulfillment-apis.md
+              items:
+                - name: Een SaaS-toepassing registreren
+                  href: ./partner-center-portal/pc-saas-registration.md
+                - name: SaaS-uitvoerings-API's v2
+                  href: ./partner-center-portal/pc-saas-fulfillment-api-v2.md
+                - name: SaaS-uitvoerings-API's v1 (afgeschaft)
+                  href: ./partner-center-portal/pc-saas-fulfillment-api-v1.md
+                - name: SaaS-uitvoerings-API's - Veelgestelde vragen
+                  href: ./partner-center-portal/saas-fulfillment-apis-faq.md
             - name: Een SaaS-toepassing registreren
               href: ./partner-center-portal/pc-saas-registration.md
             - name: SaaS-uitvoerings-API's v2
