--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -267,14 +267,14 @@
           href: sql-data-warehouse-connect-overview.md
         - name: Verbindingsreeksen
           href: sql-data-warehouse-connection-strings.md
-        - name: sqlcmd
-          href: sql-data-warehouse-get-started-connect-sqlcmd.md
+        - name: Visual Studio SSDT installeren
+          href: sql-data-warehouse-install-visual-studio.md
+        - name: Query's uitvoeren bij Visual Studio SSDT
+          href: sql-data-warehouse-query-visual-studio.md
         - name: Query's uitvoeren met SSMS
           href: sql-data-warehouse-query-ssms.md
-        - name: Query’s uitvoeren bij Visual Studio
-          href: sql-data-warehouse-query-visual-studio.md
-        - name: Visual Studio installeren
-          href: sql-data-warehouse-install-visual-studio.md
+        - name: Verbinding maken en query's uitvoeren met sqlcmd
+          href: sql-data-warehouse-get-started-connect-sqlcmd.md
     - name: Werklastbeheer
       items:
         - name: Uw workload analyseren
