--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -478,7 +478,7 @@
           items:
             - name: Write Accelerator gebruiken
               href: how-to-enable-write-accelerator.md
-            - name: Ultra SSD inschakelen
+            - name: Ultraschijven gebruiken
               href: disks-enable-ultra-ssd.md
             - name: Een benchmark-test uitvoeren op een schijf
               href: disks-benchmarks.md
