--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -193,6 +193,8 @@
       href: '../../azure-subscription-service-limits.md#app-service-limits'
     - name: Service-updates
       href: 'https://azure.microsoft.com/updates/?product=app-service'
+    - name: Migration Assistant-handleidingen
+      href: 'https://github.com/Azure/App-Service-Migration-Assistant/tree/master/MigrationDocs'
     - name: Aanbevolen procedures
       href: ../app-service-best-practices.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Voorbeelden
