--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -66,7 +66,11 @@
         - name: Containerinstallatiekopieën vergrendelen
           href: container-registry-image-lock.md
         - name: Containerinstallatiekopieën verwijderen
-          href: container-registry-delete.md
+          items:
+            - name: Afbeeldingsgegevens verwijderen - CLI
+              href: container-registry-delete.md
+            - name: Automatisch tags en manifesten leegmaken (preview)
+              href: container-registry-auto-purge.md
         - name: Een klassiek register upgraden
           href: container-registry-upgrade.md
         - name: ACR-webhooks gebruiken
