--- a/articles/dev-spaces/toc.yml
+++ b/articles/dev-spaces/toc.yml
@@ -85,5 +85,7 @@
           href: how-to/dev-spaces-business-continuity.md
         - name: Interactie met Windows-containers
           href: how-to/run-dev-spaces-windows-containers.md
+        - name: Traefik gebruiken voor aangepaste opname en HTTPS
+          href: how-to/ingress-https-traefik.md
     - name: Problemen oplossen
       href: troubleshooting.md
